--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "medium-clap-example",
-  "homepage": "https://Helio Alves.github.io/medium-clap",
+  "homepage": "https://github.com/alveshelio/react-clap.git",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
