--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "medium-clap",
+  "name": "react-clap",
   "version": "1.0.0",
-  "description": "Made with create-react-library",
+  "description": "A React clap component",
   "author": "Helio Alves",
   "license": "MIT",
-  "repository": "Helio Alves/medium-clap",
+  "repository": "https://github.com/alveshelio/react-clap.git",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.tsx",
